<resources>
    <string name="app_name">My Application</string>
    <string name="co_nde">Co\nde</string>
    <string name="verificationotp">Verification</string>
    <string name="otp_description">Enter One Time Password sent on +918591507256</string>
    <string name="forget_password_detail">Provide your Account\'s Phone Number for which you want to reset your Password!</string>
    <string name="next_btn">Next</string>
    <string name="phone_number">Phone number</string>
    <string name="new_credentials">New \n credentials</string>
    <string name="new_credentials_detail">Your Identity has been verified! \n Set your new Password</string>
    <string name="password_updated">Password \n Updated</string>
    <string name="password_updated_success_message">Your Password Has Been Updated!</string>
    <string name="login">login</string>
</resources>